--- a/views/invoice_timesheet.xml
+++ b/views/invoice_timesheet.xml
@@ -1,4 +1,4 @@
-<odoo>
+ <odoo>
     <record id="invoice_timesheet_view" model="ir.ui.view">
         <field name="name">account.analytic.line.tree</field>
         <field name="model">account.analytic.line</field>
@@ -9,7 +9,6 @@
               </field>
           </field>
     </record>
-    <!-- iki cia -- >
     <record model="ir.ui.view" id="wizard_form_view">
         <field name="name">wizard.form</field>
         <field name="model">analytic.line.invoice.wizard</field>
@@ -17,23 +16,26 @@
             <form string="Create Invoice">
                 <group>
                     <field name="product"/>
-
+                    <field name="checkbox"/>
                 </group>
                 <footer>
-                    <button name="create" type="object"
-                            string="Create" class="oe_highlight"/>
+                    <button name="create"
+                            type="object"
+                            string="Create"
+                            class="oe_highlight"/>
                     or
-                    <button special="cancel" string="Cancel"/>
+                    <button special="cancel"
+                            string="Cancel"/>
                 </footer>
             </form>
-        </field>
+    </field>
     </record>
-    <act_window id="launch_invoice_wizard"
-                name="Create Invoice"
-                src_model="account.analytic.line"
-                res_model="analytic.line.invoice.wizard"
-                view_mode="form"
-                target="new"
-                key2="client_action_multi"/>
-<!-- aa -->
+    <act_window name="Create Invoice"
+    res_model="analytic.line.invoice.wizard"
+    src_model="account.analytic.line"
+    view_mode="form"
+    multi="True"
+    target="new"
+    context=""
+    id="wizard_form_view"/>
 </odoo>
