--- a/wizards/analytic_view.xml
+++ b/wizards/analytic_view.xml
@@ -5,7 +5,8 @@
         <field name="arch" type="xml">
             <form string="Create Invoice">
                 <group>
-                    <field name="product_id"/>
+                    <!-- <field name="product_id" domain="[('type', '=', 'service') ]"/> -->
+                    <field name="product_id" domain="[('type', '=', ['service'])]"/>
                     <field name="merge_timesheets"/>
                 </group>
                 <footer>
