--- a/wizards/analytic_view.xml
+++ b/wizards/analytic_view.xml
@@ -9,10 +9,7 @@
                     <field name="product_id" domain="[('type', 'in', ['service'])]"/>
                     <field name="merge_timesheets"/>
                 </group>
-                <!-- <group states="finished"> -->
-                    <field name="invoices"
-                           states="finished"/>
-            <!--    </group> -->
+                    <field name="invoices" states="finished"/>
                 <footer states="initial">
                     <button name="create_lines"
                             type="object"
