--- a/views/account_analytic.xml
+++ b/views/account_analytic.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
  <odoo>
     <record id="invoice_timesheet_view" model="ir.ui.view">
         <field name="name">account.analytic.line.tree</field>
