--- a/wizards/analytic_view.xml
+++ b/wizards/analytic_view.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record model="ir.ui.view" id="wizard_form_view">
         <field name="name">wizard.form</field>
