--- a/wizards/analytic_view.xml
+++ b/wizards/analytic_view.xml
@@ -1,32 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <odoo>
-    <record model="ir.ui.view" id="wizard_form_view">
-        <field name="name">wizard.form</field>
-        <field name="model">analytic.line.invoice.wizard</field>
-        <field name="arch" type="xml">
-            <form string="Create Invoice">
-                <group>
-                    <field name="product_id" domain="[('type', 'in', ['service'])]"/>
-                    <field name="merge_timesheets"/>
-                </group>
-                <footer>
-                    <button name="create_lines"
-                            type="object"
-                            string="Create"
-                            class="oe_highlight"/>
-                    <button special="cancel" string="Cancel"/>
-                </footer>
-            </form>
-        </field>
-    </record>
 
-    <act_window name="Create Invoice"
-    res_model="analytic.line.invoice.wizard"
-    src_model="account.analytic.line"
-    view_mode="form"
-    multi="True"
-    target="new"
-    context=""
-    id="action_invoice_wizard"/>
+<record model="ir.ui.view" id="wizard_form_view">
+    <field name="name">wizard.form</field>
+    <field name="model">analytic.line.invoice.wizard</field>
+    <field name="arch" type="xml">
+        <form string="Create Invoice">
+            <group>
+                <field name="product_id" domain="[('type', 'in', ['service'])]"/>
+                <field name="merge_timesheets"/>
+            </group>
+            <footer>
+                <button name="create_lines" type="object" string="Create" class="oe_highlight"/>
+                <button special="cancel" string="Cancel"/>
+            </footer>
+        </form>
+    </field>
+</record>
+
+<act_window name="Create Invoice" res_model="analytic.line.invoice.wizard" src_model="account.analytic.line" view_mode="form" multi="True" target="new" context="" id="action_invoice_wizard"/>
+
 </odoo>
